--- a/styles/sections.css
+++ b/styles/sections.css
@@ -9,16 +9,27 @@
     position: relative;
     overflow: hidden;
 
-    &::before{
+    &::before {
       content: "";
       position: absolute;
       inset: 0;
       top: 50%;
-      background-color: linear-gradient(
+      background: linear-gradient(
         180deg,
         transparent 0%,
         #020617 100%
       );
+    }
+
+    figcaption{
+      position: absolute;
+      bottom: 0;
+
+      padding: 24px;
+    }
+
+    h2{
+      margin-top: 8px;
     }
   }
 }
